--- a/frontend/gestion/assets/i18n/fr.json
+++ b/frontend/gestion/assets/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+  "selSalle":"Selectionnez une salle pour filtrer",
   "quiTSesi":"Êtes-vous certains de vouloir quitter votre session",
   "newUser":"Enregistrement d'un compte utilisateur",
   "editUser":"Mise à jour d'un compte utilisateur",
